# consolide

./: .gitignore  README.md  main.py  pyproject.toml  run_examples.bat  run_examples.sh
.github/workflows/: ci-windows.yml
examples/align-case/: main.py
examples/center-layout/: main.py
examples/dashboard-layout/: main.py
examples/input-form/: main.py
examples/show-all-components/: main.py
examples/spacer-layout/: main.py
examples/styled-text/: main.py
examples/writing-a-label/: main.py
src/consolide/: __init__.py  __main__.py  ansi.py  app.py  box.py  column.py  component.py  container.py  dev_comp.py  exceptions.py  label.py  rendering.py  row.py  spacer.py  terminal.py
src/consolide/ansi/: colors.py  styles.py
src/consolide/components/: __init__.py  input.py  subtitle.py  text.py  title.py
src/consolide/core/: _component.py  layout.py  renderer.py
src/consolide/layouts/: __init__.py  align.py  box.py  center.py  column.py  container.py  padding.py  row.py  spacer.py
src/consolide/terminal/: size.py
src/consolide/utilities/: measure.py
src/consolide/widgets/: __init__.py  card.py  input.py  progress.py
tests/: test_core_scaffold.py
